gl51-master/src/test/deca/context/valid/test-negation.deca
// Description

{
    boolean a = true;
    boolean b = !a;
}