gl51-master/src/test/deca/context/invalid/test_rule3_28.deca
// Description
// Assignation incompatible

{
    float a = "Hello";
    //PASSED
}